--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ a:hover {
 
 .encabezado-nosotros {
     font-family: 'Poppins', sans-serif;
+    font-weight: 600;
     text-align: center;
     margin: 40px;
     font-size: 40px;
@@ -186,7 +187,7 @@ a:hover {
     grid-column: 1 / 4;
     margin: 20px;
     font-family: 'Poppins', sans-serif;
-    font-weight: 200px;
+    font-weight: 600;
     font-size: 40px;
     text-align: center;
 }
