--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,3 +1,6 @@
+@import '../base/listas';
+@import '../base/estilosGenerales';
+
 .main-banner {
     .div-banner {
         display: grid;
@@ -36,7 +39,7 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         width: 80%;
-        height: 20px auto;
+        height: 20% auto;
         margin: 40px;
 
         .card {
@@ -55,7 +58,7 @@
                 font-size: 20px;
                 text-align: center;
                 font-weight: 600;
-                color: #416A96;
+                color: nth($colores,2);
             }
 
             .img-card {
@@ -71,7 +74,7 @@
                 font-size: 15px;
                 text-align: center;
                 font-weight: 400;
-                color: gray;
+                color: nth($colores,5);
             }
         }
     }
@@ -96,9 +99,6 @@
     @media screen and (min-width:601px) and (max-width:950px) {
         .div-card-index {
             grid-template-columns: repeat(2, 1fr);
-        }
-        .card-responsive{
-            
         }
     }
 }
