--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,13 @@
 
 
 /*import*/
-
-@import 'components/header';
+@import 'base/listas';
 @import 'base/estilosGenerales';
+@import 'components/header';
 @import 'components/footer';
 @import 'components/index';
 @import 'components/nosotros';
 @import 'components/productos';
+@import 'components/contacto';
+@import 'components/carrito';
+
