--- a/backup.css
+++ b/backup.css
@@ -7,7 +7,7 @@
 /*header*/
 
 .header-logo {
-    width: 15%;
+    width: 15px;
     height: auto;
     display: flex;
 }
@@ -205,6 +205,7 @@ a:hover {
 .boton-enviar {
     margin: 10px;
     text-align: right;
+    
 }
 
 /*Fin de contacto*/
