--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,6 +1,8 @@
+@import '../base/listas';
+
 header {
     .header-logo {
-        width: 15%;
+        width: 100px;
         height: auto;
         display: flex;
     }
@@ -13,7 +15,7 @@ header {
 
         .li-hover:hover {
             transform: scale(1.1);
-            background-color: #416A96;
+            background-color: nth($colores,2);
             
         }
 
