--- a/scss/components/_nosotros.scss
+++ b/scss/components/_nosotros.scss
@@ -1,7 +1,31 @@
+@import '../base/listas';
+
+
+
 .titulo {
     margin: 30px;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 40px;
     text-align: center;
+}
+
+.main-nosotros{
+    .div-nosotros{
+        .maps{
+            @media only screen and (max-width: 1015px) {
+                .maps {
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+                }
+            
+                .maps-basile{
+                    margin: 10px;
+                    width: 100%;
+                    margin-bottom: 30px;
+                }
+            }
+        }
+    }
 }
