--- a/scss/components/_productos.scss
+++ b/scss/components/_productos.scss
@@ -1,3 +1,5 @@
+@import '../base/listas';
+
 .div-productos {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -6,14 +8,14 @@
     padding: 10px;
     gap: 30px;
 
-    .productos {
-        grid-column: 1 / 4;
-        margin: 30px;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 600;
-        font-size: 40px;
-        text-align: center;
+    @media only screen and (max-width:600px) {
+        width: 80%;
     }
+
+    @media screen and (min-width:601px) and (max-width:900px) {
+        width: 90%;
+    }
+
 
     .contenedor-prod {
         border-radius: 20px;
@@ -22,9 +24,13 @@
         display: grid;
         justify-items: center;
 
+        @media only screen and (max-width:600px) {
+            grid-column: 1 / 4;
+        }
+
         &:hover {
             transform: scale(1.1);
-            background-color: #416A96;
+            background-color: nth($colores,2);
             transition-property: all;
             transition-duration: 2s;
             color: white;
@@ -47,85 +53,36 @@
 
         .precio-carrito {
             display: flex;
-           align-content:flex-end;
-            
-            .carrito{
-                color: black;
-                
+
+            .carrito {
+                color: nth($colores,4);
+                margin-bottom: 5px;
+
                 &:hover {
                     transform: scale(1.1);
                     transition-property: all;
                     transition-duration: 2s;
-                    color: white;
+                    color: nth($colores,6);
                 }
             }
+        }
 
+        .p-desc-prod {
+            font-family: sans-serif;
+            font-size: 15px;
+            color: nth($colores,5);
 
-            .p-desc-prod {
-                font-family: sans-serif;
-                font-size: 15px;
-                color: #3F3F3F;
-                padding: 5px;
-
-                &:hover {
-                    transform: scale(1.1);
-                    background-color: #416A96;
-                    transition-property: all;
-                    transition-duration: 2s;
-                    color: white;
-                }
+            &:hover {
+                transform: scale(1.1);
+                background-color: nth($colores,2);
+                transition-property: all;
+                transition-duration: 2s;
+                color: white;
             }
+        }
 
 
-        }
-    }
 
-    @media screen and (max-width:600px) {
-        .div-productos {
-            grid-template-columns: repeat(1, 1fr);
-            width: 80%;
-            margin: 30px auto;
-
-            padding: 10px;
-            gap: 30px;
-        }
-    
-        .contenedor-prod {
-            grid-column: 1 / 2;
-        }
-    
-        .p-titulo-prod {
-            font-size: 15px;
-        }
-    
-        .p-desc-prod {
-            font-size: 10px;
-        }
-    }
-
-    @media only screen and (min-width:601px) and (max-width:1000px) {
-        .productos {
-            font-size: 20px;
-        }
-    
-        .div-productos {
-            grid-template-columns: repeat(2, 1fr);
-            width: 80%;
-            margin: 30px auto;
-        }
-    
-        .contenedor-prod {
-            grid-column: 1 / 2;
-        }
-    
-        .p-titulo-prod {
-            font-size: 15px;
-        }
-    
-        .p-desc-prod {
-            font-size: 10px;
-        }
-    
     }
 
 }
