--- a/scss/base/_estilosGenerales.scss
+++ b/scss/base/_estilosGenerales.scss
@@ -3,13 +3,11 @@
    padding: 0;
 }
 
-h1{
-   grid-column: 1 / 4;
-   margin: 30px;
+
+.titulo{
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    font-size: 40px;
-   text-align: center;
 }
 
 .contenedor-principal{
