--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 
 /*import*/
 @import 'base/listas';
+@import 'base/extend';
 @import 'base/estilosGenerales';
 @import 'components/header';
 @import 'components/footer';
@@ -10,4 +11,5 @@
 @import 'components/productos';
 @import 'components/contacto';
 @import 'components/carrito';
+
 
