--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,5 +1,6 @@
 @import '../base/listas';
 @import '../base/estilosGenerales';
+@import '../base/extend';
 .main-banner {
     .div-banner {
         display: grid;
@@ -36,11 +37,9 @@
             align-content: center;
             justify-items: center;
             align-items: center;
-            box-shadow: 5px 5px 10px gray;
-            border-radius: 20px;
             width: 300px;
             height: 400px;
-            margin: 10px;
+            @extend %contenedor-principal;
 
 
             .titulo-card {
